--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>My first project</h1>
+    <h1>My first project</h1>
     <p>This is the frist project i am making on html</p>
-    <img src="assets/images/ 01-02-02_ci-logo.png" alt="Code Institute Logo " />
+    <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo " />
+
+    <h2>Vs Code is awsome !</h2>
   </body>
 </html>
