--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <body>
     <h1>My first project</h1>
     <h1>My first project</h1>
-    <p>This is the frist project i am making on html</p>
-    <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo " />
-
-    <h2>Vs Code is awsome !</h2>
+    <p>This is my first project built in an IDE!</p>
+    <h2>VS Code is awesome!</h2>
+    <img src="assets/images/ci-logo.png" alt="Code Institute Logo" />
   </body>
 </html>
