Ensure all the images are showing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       Using the VS Code Source Control Panel makes committing my code even
       faster!
     </p>
-    <img src="assets/images/ci-logo.png" alt="Code Institute Logo" />
+    <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo " />
   </body>
 </html>
